# sasha

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
crates/cargo-sasha/: Cargo.toml
crates/cargo-sasha/src/: cli.rs  command.rs  main.rs  script.rs
crates/sasha-daemon/: Cargo.toml
crates/sasha-daemon/benches/: socket_path.rs
crates/sasha-daemon/src/: client.rs  client_handler.rs  command_handler.rs  command_listener.rs  daemon.rs  events.rs  exec.rs  logger.rs  main.rs  niri.rs
crates/sasha-daemon/src/events/: mod.rs  request_event.rs  sasha_event.rs
crates/sasha-daemon/src/niri/: connector.rs  listener.rs  mod.rs  models.rs  stores.rs
crates/sasha-daemon/src/stores/: mark.rs  mod.rs  window.rs  workspace.rs
scripts/: develop_sasha.sh  install_sasha_service.sh  stop_sasha_service.sh  test.sh  update_daemon.sh  update_sasha_service.sh
scripts/daemon/: update_daemon.sh
scripts/niri/: focus-window-mark.sh
scripts/service/: start_sasha_service.sh
scripts/utils/: start_live_sasha_logs.sh
src/: main.rs
systemd/: sasha.service
