[package]
name = "sasha-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
